# healthtrack-insight-api

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  SYSTEM_DESIGN.md  docker-compose.yml  healthtrack-architecture.drawio  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
app/: main.py
app/api/: __init__.py
app/api/endpoints/: __init__.py  health_goals.py  health_insights.py  health_metrics.py  nutrition_logs.py  recommendations.py  users.py
app/core/: cache.py  config.py  rate_limit.py  security.py
app/db/: session.py
app/models/: __init__.py
app/schemas/: __init__.py
migrations/: alembic.ini  env.py
migrations/versions/: 2f0763747cdf_create_initial_tables.py  924198b562f1_add_fundamental_fields.py
scripts/: init-db.sql  insights_engine.py  seed_db.py
tests/: test_api.py
